--- a/app/styles/routes/_settings.scss
+++ b/app/styles/routes/_settings.scss
@@ -14,8 +14,4 @@
     font-size: $font-size-large;
     margin-bottom: $spacing-unit;
   }
-
-  section {
-    margin-bottom: $spacing-large;
-  }
 }
